--- a/pages/blog.html
+++ b/pages/blog.html
@@ -342,13 +342,14 @@
           data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
           aria-controls="panelsStayOpen-collapseThree">
           <h6>Blog Post #1</h6>
-          <h5>Creating a Personal Website on GitHub</h5>
+          <h5>Creating a Website on GitHub</h5>
         </button>
       </h2>
       <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse bg-transparent"
         aria-labelledby="panelsStayOpen-headingThree">
         <div class="accordion-body">
-          <p><span style="color:white;padding-right:0.5rem;">Hello World!</span> Pun intended. :)</p>
+          <h4>Hello World!</h4>
+          <p style="color:white;">Pun intended. &#128516;</p>
           <p>My name is Pete and this is my first blog post. I am enrolled in a Full Stack coding bootcamp and one of
             our first assignments is to develop a set of instructions for creating a personal GitHub page.</p>
           <p>As I prepared for this bootcamp, I used some free online resources like <a
