--- a/pages/experience.html
+++ b/pages/experience.html
@@ -86,8 +86,8 @@
       <span class="h3">Description</span>
     </div>
     <p>LeNova, Inc. is a engineering and technology solutions provider with a focus on the Life Sciences and Commercial
-      industries. LeNova, Inc. has over 30 years of experience, with a focus on the biopharmaceutical space. I joined
-      LeNova in 2022 to support business expansion initiatives and develop their website.</p>
+      industries. LeNova, Inc. has over 30 years of experience, and has specializations in the biopharmaceutical space. I joined
+      LeNova in 2022 to support business expansion initiatives, develop their website, and build upon to their core competencies.</p>
     <p>My roles and responsibilities include:</p>
     <ul>
       <li>Research business goals, customers and their expected behavior.</li>
