--- a/pages/projects.html
+++ b/pages/projects.html
@@ -75,16 +75,16 @@
 
   <div class="row container-fluid justify-content-center">
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/pacman/pics/pacman_icon.ico" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
+      <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
       <div class="card-body">
         <h5 class="card-title">Pac-Man Mini-Game</h5>
         <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='./blog.html#blog3'>Blog Post</a>.</p>
+        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='../pages/blog.html#blog3'>Blog Post</a>.</p>
         <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Me</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
+      <img src="../pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
       <div class="card-body">
         <h5 class="card-title">L.M.N.O. Photography</h5>
         <p class="card-text">Built <span>landing page</span> <a href="https://www.lmnophoto.biz" target="_blank">lmnophoto.biz</a> for a Photographer who specializes in weddings and events!</p>
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="card col-sm-4" style="width:18rem;">
-      <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top px-4" alt="Calculator image">
+      <img src="../pics/odin-calc.ico" class="card-img-top px-4" alt="Calculator image">
       <div class="card-body">
         <h5 class="card-title">JavaScript Calculator</h5>
         <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
@@ -121,7 +121,7 @@
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/odin-landingpage/img1.jpg" class="card-img-top"
+      <img src="../pics/odin-landingpage.jpg" class="card-img-top"
         alt="Screenshot of a Rock, Paper, Scissors project.">
       <div class="card-body">
         <h5 class="card-title">Landingpage Project</h5>
