--- a/pages/blog.html
+++ b/pages/blog.html
@@ -103,7 +103,7 @@
             <div class="row mx-auto">
               <img src="../pics/pacman/pacman_icon.png" class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="Pac-Man chasing logo." style="max-width:25vw;">
               <div class="col-sm-10 m-auto" style="max-width: 640px;">
-                <p>I decided to add some additional features: <span style="color:white;">user controls</span>, image support for vertical movement, and integration of the previous 'Magic Ball Challenge' to give Pac-Man something to do. Check out the images and write-up below for more details.</p>
+                <p class="narrowText">I decided to add some additional features: <span style="color:white;">user controls</span>, image support for vertical movement, and integration of the previous 'Magic Ball Challenge' to give Pac-Man something to do. Check out the images and write-up below for more details.</p>
               </div>
             </div>
           </div>
@@ -291,7 +291,7 @@
               <img class="img-fluid" src="../pics/magicBall/magicBall_randomColorFunction.png"
                 alt="Screenshot of JavaScript showing the random color function.">
             </a>
-            <p>Image 5 shows the random color function, which uses the <a
+            <p class="narrowText">Image 5 shows the random color function, which uses the <a
                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/floor"
                 target="_blank">'Math.floor'</a> and <a
                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random"
@@ -309,7 +309,7 @@
                 <img class="img-fluid" src="../pics/magicBall/magicBall_resizeFunction.png"
                   alt="Screenshot of JavaScript showing the resize function.">
               </a>
-              <p>Image 6 starts off with some new <a
+              <p class="narrowText">Image 6 starts off with some new <a
                   href='https://developer.mozilla.org/en-US/docs/Glossary/Global_variable' target='_blank'>global
                   variables</a> so that the ball can be resized along its journey. This includes a starting size (set to
                 match the original 'ball' height & width), min and max limits, and a rate of change.</p>
@@ -329,7 +329,7 @@
             </div>
           </div>
           <div class="m-auto" style="max-width: 640px;">
-            <p>Please let me know with any suggestions, or comments. Thank you again for visiting, and happy coding!</p>
+            <p class="narrowText">Please let me know with any suggestions, or comments. Thank you again for visiting, and happy coding!</p>
             </div>
           <div>
             <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
