blog 2 img 5 and pls narrowtext rollback

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -291,7 +291,7 @@
               <img class="img-fluid" src="../pics/magicBall/magicBall_randomColorFunction.png"
                 alt="Screenshot of JavaScript showing the random color function.">
             </a>
-            <p class="narrowText">Image 5 shows the random color function, which uses the <a
+            <p>Image 5 shows the random color function, which uses the <a
                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/floor"
                 target="_blank">'Math.floor'</a> and <a
                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random"
@@ -329,7 +329,7 @@
             </div>
           </div>
           <div class="m-auto" style="max-width: 640px;">
-            <p class="narrowText">Please let me know with any suggestions, or comments. Thank you again for visiting, and happy coding!</p>
+            <p>Please let me know with any suggestions, or comments. Thank you again for visiting, and happy coding!</p>
             </div>
           <div>
             <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
