--- a/pages/test.html
+++ b/pages/test.html
@@ -79,14 +79,13 @@
         style="color:darkorange;">replace</span>(<br>
       <span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',<br>
       <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
-
-      <h2>stationInLife.replace('Pharmaceutical Engineer', 'Software Developer');</h2>
   </figure> -->
 
   <figure id='typeWriter' class="mx-auto">
-    <h2 id="typeWriter1">stationInLife.replace(</h2>
-    <h2 id="typeWriter2">__'Pharmaceutical Engineer',</h2>
-    <h2 id="typeWriter3">__'Software Developer');</h2>
+    <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+      style="color:darkorange;">replace</span>(</h2>
+    <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
+    <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
   </figure>
 
   <footer class="container-fluid fixed-bottom">
