--- a/pages/test.html
+++ b/pages/test.html
@@ -81,12 +81,14 @@
       <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
   </figure> -->
 
-  <figure id='typeWriter' class="mx-auto">
-    <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
-      style="color:darkorange;">replace</span>(</h2>
-    <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
-    <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
-  </figure>
+  <section id="typeWriterSection">
+    <figure id='typeWriter' class="mx-auto">
+      <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+        style="color:darkorange;">replace</span>(</h2>
+        <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
+        <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
+      </figure>
+  </section>
 
   <footer class="container-fluid fixed-bottom">
     <p>Copyright ©
