--- a/pages/welcome_old.html
+++ b/pages/welcome_old.html
@@ -24,7 +24,7 @@
   <!-- My CSS & JS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/test.css">
+  <link rel="stylesheet" href="../css/welcome.css">
   <script src='../js/index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -74,14 +74,12 @@
     </figure>
   </div>
 
-  <section id="typeWriterSection">
-    <figure id='typeWriter' class="mx-auto">
-      <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
-        style="color:darkorange;">replace</span>(</h2>
-        <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
-        <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
-      </figure>
-  </section>
+  <figure class='animationFlipIn'>
+    <h2 style="letter-spacing:0.125rem;"><span style="color: silver">stationInLife</span>.<span
+        style="color:darkorange;">replace</span>(<br>
+      <span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',<br>
+      <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
+  </figure>
 
   <footer class="container-fluid fixed-bottom">
     <p>Copyright ©
