--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -74,12 +74,14 @@
     </figure>
   </div>
 
-  <figure class='animationFlipIn'>
-    <h2 style="letter-spacing:0.125rem;"><span style="color: silver">stationInLife</span>.<span
-        style="color:darkorange;">replace</span>(<br>
-      <span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',<br>
-      <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
-  </figure>
+  <section id="typeWriterSection">
+    <figure id='typeWriter' class="mx-auto">
+      <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+        style="color:darkorange;">replace</span>(</h2>
+        <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
+        <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
+      </figure>
+  </section>
 
   <footer class="container-fluid fixed-bottom">
     <p>Copyright ©
