--- a/pages/welcome_old.html
+++ b/pages/welcome_old.html
@@ -24,7 +24,7 @@
   <!-- My CSS & JS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/welcome.css">
+  <link rel="stylesheet" href="../css/welcome_old.css">
   <script src='../js/index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
