--- a/pages/blog_old.html
+++ b/pages/blog_old.html
@@ -18,10 +18,15 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- My CSS -->
+
+  <!-- Scroll Magic JS -->
+  <script src="../libraries/ScrollMagic.min.js"></script>
+
+  <!-- My CSS & JS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/blog.css">
+  <script src='../js/index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
   <title>codeByPete</title>
@@ -63,17 +68,16 @@
     </div>
   </nav>
 
-  <div class="accordion myBlog mx-auto">
-
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button id='blog3Button' onclick="blog3Open()" class="accordion-button bg-transparent" type="button" data-bs-toggle="collapse"
+  <div class="accordion myBlog mx-auto" id="accordionPanelsStayOpenExample">
+    <div id='blog3' class="accordion-item">
+      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+        <button class="accordion-button bg-transparent" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-          <h6>blog[3]</h6>
+          <h6>Blog[3]</h6>
           <h5>Pac-Man Mini-Game</h5>
         </button>
       </h2>
-      <div id="blog3" class="accordion-collapse collapse show"
+      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
           <div class="'container-fluid row">
@@ -82,29 +86,24 @@
                 <h4 class="text-center mb-4">Hello Again!</h4>
                 <div class='m-auto' style="max-width: 480px;">
                   <div class="h6">
-                    Welcome to my third blog post & discussion assignment from the <span style="color:white;">MIT xPro
-                      Full Stack Coding Bootcamp</span>.
+                    Welcome to my third blog post & discussion assignment from the <span style="color:white;">MIT xPro Full Stack Coding Bootcamp</span>. 
                   </div>
                   <div class="h6">
-                    Starter code was provided and the project scope included coding a '<span
-                      style="color:white;">Pac-Man Factory</span>' with 2D hard-coded movement, boundary response, and
-                    alternating images to animate horizontal movement.
+                    Starter code was provided and the project scope included coding a '<span style="color:white;">Pac-Man Factory</span>' with 2D hard-coded movement, boundary response, and alternating images to animate horizontal movement.
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-sm-4 my-auto p-3">
-              <img class="img-fluid" src="../pics/pacman/pacman_minigame.png"
-                alt="Screenshot of JavaScript showing the resize function.">
+              <!-- <a href="../pics/pacman/pacman_minigame.png" target="_blank"> -->
+                <img class="img-fluid" src="../pics/pacman/pacman_minigame.png"
+                  alt="Screenshot of JavaScript showing the resize function.">
+              <!-- </a> -->
             </div>
             <div class="row mx-auto">
-              <img src="../pics/pacman/pacman_icon.png" class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4'
-                alt="Pac-Man chasing logo." style="max-width:25vw;">
+              <img src="../pics/pacman/pacman_icon.png" class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="Pac-Man chasing logo." style="max-width:25vw;">
               <div class="col-sm-10 m-auto" style="max-width: 640px;">
-                <p class="narrowText">I decided to add some additional features: <span style="color:white;">user
-                    controls</span>, image support for vertical movement, and integration of the previous 'Magic Ball
-                  Challenge' to give Pac-Man something to do. Check out the images and write-up below for more details.
-                </p>
+                <p class="narrowText">I decided to add some additional features: <span style="color:white;">user controls</span>, image support for vertical movement, and integration of the previous 'Magic Ball Challenge' to give Pac-Man something to do. Check out the images and write-up below for more details.</p>
               </div>
             </div>
           </div>
@@ -115,16 +114,9 @@
                 alt="Screenshot of JavaScript showing the global variables.">
             </a>
             <div class="row">
-              <p class='mx-auto col-sm-4'>Image 1 shows all the <a
-                  href="https://developer.mozilla.org/en-US/docs/Glossary/Global_variable" target="'_blank">Global
-                  Variables</a>. Additional Pac-Man images were created for vertical movement and then included in the
-                'pacArray' variable.</p>
-              <p class='mx-auto col-sm-4'>I used the <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById"
-                  target="_blank">getElementById method</a> to assign aspects of the HTML that would later be
-                manipulated by JavaScript.</p>
-              <p class='mx-auto col-sm-4'>Global variables were also assigned for Pac-Man and the Ball to enable
-                movement and collision detection.</p>
+              <p class='mx-auto col-sm-4'>Image 1 shows all the <a href="https://developer.mozilla.org/en-US/docs/Glossary/Global_variable" target="'_blank">Global Variables</a>.  Additional Pac-Man images were created for vertical movement and then included in the 'pacArray' variable.</p>
+              <p class='mx-auto col-sm-4'>I used the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById" target="_blank">getElementById method</a> to assign aspects of the HTML that would later be manipulated by JavaScript.</p>
+              <p class='mx-auto col-sm-4'>Global variables were also assigned for Pac-Man and the Ball to enable movement and collision detection.</p>
             </div>
           </div>
           <div class="container-fluid row">
@@ -136,12 +128,7 @@
                     alt="Screenshot of JavaScript showing utility functions.">
                 </a>
               </div>
-              <p class="narrowText">Image 2 shows a couple 'utility' functions. <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random"
-                  target="_blank">Random</a> numbers are always useful, and the <a
-                  href='https://developer.mozilla.org/en-US/docs/Web/API/Window/orientationchange_event'
-                  target='_blank'>onorientationchange method</a> reloads screen to update boundaries upon screen
-                orientation change.</p>
+              <p class="narrowText">Image 2 shows a couple 'utility' functions.  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random" target="_blank">Random</a> numbers are always useful, and the <a href='https://developer.mozilla.org/en-US/docs/Web/API/Window/orientationchange_event' target='_blank'>onorientationchange method</a> reloads screen to update boundaries upon screen orientation change.</p>
             </div>
             <div class="col-sm-5">
               <div>
@@ -151,11 +138,7 @@
                     alt="Screenshot of JavaScript showing user input functions.">
                 </a>
               </div>
-              <p class="narrowText">Image 3 shows the functions for User Input. I used <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener"
-                  target="_blank">Event Listeners</a> and the <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key" target="_blank">Keyboard
-                  Event sequence</a> to manage the keyboard inputs and responses.</p>
+              <p class="narrowText">Image 3 shows the functions for User Input. I used <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="_blank">Event Listeners</a> and the <a href="https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key" target="_blank">Keyboard Event sequence</a> to manage the keyboard inputs and responses.</p>
             </div>
           </div>
           <div class="container-fluid row">
@@ -167,9 +150,7 @@
                     alt="Screenshot of JavaScript showing functions for Pac-Man's movement.">
                 </a>
               </div>
-              <p class="narrowText">Image 4 shows the functions for the Pac-Man element. The Run function manages which
-                image is shown then calls the Move function, which changes Pac-Man's position on the screen. The
-                checkCollison and checkLimits functions check for Pac-Man contacting a boundary or the ball. </p>
+              <p class="narrowText">Image 4 shows the functions for the Pac-Man element.  The Run function manages which image is shown then calls the Move function, which changes Pac-Man's position on the screen.  The checkCollison and checkLimits functions check for Pac-Man contacting a boundary or the ball. </p>
             </div>
             <div class="col-sm-5">
               <div>
@@ -179,14 +160,14 @@
                     alt="Screenshot of JavaScript showing functions for the ball's movement.">
                 </a>
               </div>
-              <p class="narrowText">Image 5 shows the functions for the Ball element. Refer to my <a href='./blog.html#blog2'>Magic Ball Challenge</a> blog post for more details.</p>
+              <p class="narrowText">Image 5 shows the functions for the Ball element.  Refer to my <a href='./blog.html#blog2'>Magic Ball Challenge</a> blog post for more details.</p>
             </div>
           </div>
           <div class="container-fluid row mx-auto">
             <div class="col-sm-6">
               <h6 class="text-center">Watch Video</h6>
-              <iframe class='container-fluid ratio ratio-1x1'
-                src="https://youtube.com/embed/iOKK8Q2unxE?&autoplay=0&mute=1" frameborder="0" allowfullscreen>
+              <iframe class='container-fluid ratio ratio-1x1' 
+              src="https://youtube.com/embed/iOKK8Q2unxE?&autoplay=0&mute=1" frameborder="0" allowfullscreen>
               </iframe>
             </div>
             <div class="col-sm-6 my-auto text-center">
@@ -204,14 +185,15 @@
     </div>
 
     <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button id='blog2Button' onclick="blog2Open()" class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
+      <h2 id='blog2' class="accordion-header" id="panelsStayOpen-headingTwo">
+        <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-          <h6>blog[2]</h6>
+          <h6>Blog[2]</h6>
           <h5>Magic Ball Challenge</h5>
         </button>
       </h2>
-      <div id="blog2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+        aria-labelledby="panelsStayOpen-headingTwo">
         <div class="accordion-body">
           <div class="'container-fluid row">
             <div class="col-sm-8 my-auto">
@@ -241,8 +223,7 @@
                     alt="Screenshot of HTML showing the 'Original Div' portion of my Magic Ball Project.">
                 </a>
               </div>
-              <p class="narrowText">Image 1 shows the HTML 'div' for the ball and its style attributes. This was
-                provided by the MIT xPro
+              <p class="narrowText">Image 1 shows the HTML 'div' for the ball and its style attributes. This was provided by the MIT xPro
                 Bootcamp. I added the 'body' tags since I was using <a href="https://code.visualstudio.com/"
                   target="_blank">Visual Studio Code</a> and the editor indicated that I needed to add those in order to
                 use the <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer"
@@ -256,8 +237,7 @@
                     alt="Screenshot of HTML showing my logo in image tags.">
                 </a>
               </div>
-              <p class="narrowText">In Image 2, I decided to personalize this challenge by adding my logo to the ball. I
-                did this by using
+              <p class="narrowText">In Image 2, I decided to personalize this challenge by adding my logo to the ball. I did this by using
                 an HTML <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img"
                   target="_blank">'img'</a> tag instead of the <a
                   href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div" target="_blank">'div'</a> tags.
@@ -350,7 +330,7 @@
           </div>
           <div class="m-auto" style="max-width: 640px;">
             <p>Please let me know with any suggestions, or comments. Thank you again for visiting, and happy coding!</p>
-          </div>
+            </div>
           <div>
             <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
                 alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 20, 2022
@@ -362,15 +342,16 @@
     </div>
 
     <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button id='blog1Button' onclick="blog1Open()" class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
+      <h2 id='blog1' class="accordion-header" id="panelsStayOpen-headingThree">
+        <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
           aria-controls="panelsStayOpen-collapseThree">
-          <h6>blog[1]</h6>
-          <h5>Creating a GitHub Website</h5>
+          <h6>Blog[1]</h6>
+          <h5>Creating a Website on GitHub</h5>
         </button>
       </h2>
-      <div id="blog1" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingThree">
+      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse bg-transparent"
+        aria-labelledby="panelsStayOpen-headingThree">
         <div class="accordion-body">
           <h4>Hello World!</h4>
           <p style="color:white;">Pun intended. &#128516;</p>
@@ -422,43 +403,7 @@
         </div>
       </div>
     </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button id='blog0Button' onclick='blog0Open()' class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-          aria-controls="panelsStayOpen-collapseThree">
-          <h6>blog[0]</h6>
-          <h5>Coding Bootcamp Introduction</h5>
-        </button>
-      </h2>
-      <div id="blog0" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingThree">
-        <div class="accordion-body">
-          <p>Hello!</p>
-          <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My
-            technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering.
-          </p>
-          <p>I have a bachelor's degree in Biological Sciences from the University of Delaware. My experience includes
-            Validation Consulting with Integrated Project Services (IPS), as well as direct employment with Janssen (formerly
-            Centocor, Johnson & Johnson), and Eisai, Inc. (formerly Morphotek).</p>
-          <p>With Janssen and Eisai, I was responsible for leading equipment and system qualification efforts as a Senior
-            Validation Engineer. In 2012, I transitioned to a Senior Quality Engineer role within Eisai and was responsible
-            for site metrics, quality dispositions, change controls, and leading investigations. In 2017, I was managing the
-            GMP Document Control and Quality Engineering teams.</p>
-          <p>In December of 2021, I stumbled upon freeCodeCamp.org and rediscovered my childhood passion of coding and
-            technology. I am currently at the midpoint of my career and have decided to part ways with Eisai in order to
-            pursue a career change that is in line with a personal passion.</p>
-          <p>I look forward to working with you on this exciting part of my journey!</p>
-          <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg"
-              alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best Regards,</p>
-          <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu,<br> 9 Feb, 2022</p>
-          <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div> <!-- myBlog closing div -->
+  </div>
 
   <footer class="container-fluid">
     <p>Copyright ©
@@ -479,8 +424,6 @@
 
   <!-- JS Libraries: Bootstrap -->
   <script src="../libraries/bootstrap.min.js"></script>
-  <script src="../libraries/ScrollMagic.min.js"></script>
-  <script src='../js/blog.js'></script>
 </body>
 
 </html>
