--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -77,7 +77,7 @@
   <section id="typeWriterSection">
     <figure id='typeWriter' class="mx-auto">
       <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
-        style="color:purple;">replace</span>(</h2>
+        style="color:darkmagenta;">replace</span>(</h2>
         <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',</h2>
         <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
       </figure>
