shadow box and bg updates blog proj

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -477,9 +477,9 @@
         src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
   </footer>
 
-  <!-- JS Libraries: Bootstrap -->
+  <!-- JS Libraries -->
   <script src="../libraries/bootstrap.min.js"></script>
-  <script src="../libraries/ScrollMagic.min.js"></script>
+  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
   <script src='../js/blog.js'></script>
 </body>
 
