--- a/pages/construction.html
+++ b/pages/construction.html
@@ -9,23 +9,18 @@
   <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
   <!-- Bootstrap Link -->
-  <link rel="stylesheet" href="../libraries/">
+  <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
   <!-- Font CSS Links -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
-
-  <!-- Scroll Magic JS -->
-  <script src="../libraries/ScrollMagic.min.js"></script>
-
-  <!-- My CSS & JS -->
+  <!-- My CSS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/construction.css">
-  <script src='../index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
   <title>codeByPete</title>
@@ -51,6 +46,8 @@
       <script>
         document.write(new Date().getFullYear())
       </script>
+      <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
+        alt="My 'Pharma 2 Code' Logo.">
       <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
     </p>
     <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
@@ -61,8 +58,9 @@
         src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
   </footer>
 
-  <!-- JS Libraries: Bootstrap -->
+  <!-- JS Libraries -->
   <script src="../libraries/bootstrap.min.js"></script>
+  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
 </body>
 
 </html>
