--- a/pages/experience.html
+++ b/pages/experience.html
@@ -18,14 +18,10 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- Scroll Magic JS -->
-  <script src="../libraries/ScrollMagic.min.js"></script>
-
-  <!-- My CSS & JS -->
+  <!-- My CSS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/experience.css">
-  <script src='../js/index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
   <title>codeByPete</title>
@@ -235,8 +231,9 @@
         src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
   </footer>
 
-  <!-- JS Libraries: Bootstrap -->
+  <!-- JS Libraries -->
   <script src="../libraries/bootstrap.min.js"></script>
+  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
 </body>
 
 </html>
