--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,14 +18,10 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- Scroll Magic JS -->
-  <script src="../libraries/ScrollMagic.min.js"></script>
-
-  <!-- My CSS & JS -->
+  <!-- My CSS -->
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/projects.css">
-  <script src='../js/index.js' defer></script>
   <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
   <title>codeByPete</title>
@@ -73,7 +69,8 @@
     <h3>There will be more to come, please visit again.</h3>
   </div>
 
-  <div class="row container-fluid justify-content-center">
+  <div id='myProjects' class="row container-fluid justify-content-center">
+
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
       <div class="card-body">
@@ -83,6 +80,7 @@
         <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Me</a>
       </div>
     </div>
+
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="../pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
       <div class="card-body">
@@ -92,6 +90,7 @@
         <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Me</a>
       </div>
     </div>
+
     <div class="card col-sm-4" style="width:18rem;">
       <img src="../pics/odin-calc.ico" class="card-img-top px-4" alt="Calculator image">
       <div class="card-body">
@@ -101,6 +100,7 @@
         <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Do Math</a>
       </div>
     </div>
+
     <div class="card col-sm-4" style="width:18rem;">
       <img src="../pics/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
       <div class="card-body">
@@ -110,6 +110,7 @@
         <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Draw Something</a>
       </div>
     </div>
+
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="../pics/rock-paper-scissors.png" class="card-img-top"
         alt="Screenshot of a Rock, Paper, Scissors project.">
@@ -120,6 +121,7 @@
         <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Play Me</a>
       </div>
     </div>
+
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="../pics/odin-landingpage.jpg" class="card-img-top"
         alt="Screenshot of a Rock, Paper, Scissors project.">
@@ -131,7 +133,8 @@
           Me</a>
       </div>
     </div>
-  </div>
+
+  </div> <!-- Row closing div -->
 
   <footer class="container-fluid">
     <p>Copyright ©
@@ -150,8 +153,9 @@
         src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
   </footer>
 
-  <!-- JS Libraries: Bootstrap -->
+  <!-- JS Libraries -->
   <script src="../libraries/bootstrap.min.js"></script>
+  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
 </body>
 
 </html>
