old cleanup, dark50 bg to pages, old welcome blog removal, js link cleanup

--- a/pages/about.html
+++ b/pages/about.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -63,7 +64,7 @@
     </div>
   </nav>
 
-  <div id='article1' class="container-fluid mx-auto">
+  <!-- <div id='article1' class="container-fluid mx-auto">
     <p>Hello!</p>
     <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My
       technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering.
@@ -83,8 +84,12 @@
         alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best Regards,</p>
     <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu, Feb 2022</p>
     <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
-  </div>
-  </div>
+  </div> -->
+  <!-- </div> -->
+
+  <figure class='animationFlipIn text-center my-5'>
+    <h1 style="text-shadow:1px 1px silver;">This page is currently under construction...</h1>
+  </figure>
 
   <footer class="container-fluid">
     <p>Copyright ©
