--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,7 +77,10 @@
         <h5 class="card-title">Pac-Man Mini-Game</h5>
         <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
         <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='../pages/blog.html#blog3'>Blog Post</a>.</p>
-        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Me</a>
+        <div class="btnContainer">
+          <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Game</a>
+          <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
@@ -87,7 +90,10 @@
         <h5 class="card-title">L.M.N.O. Photography</h5>
         <p class="card-text">Built <span>landing page</span> <a href="https://www.lmnophoto.biz" target="_blank">lmnophoto.biz</a> for a Photographer who specializes in weddings and events!</p>
         <p class="card-text">This was my <span>first website</span> using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
-        <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Me</a>
+        <div class="btnContainer">
+          <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
+          <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
@@ -97,7 +103,10 @@
         <h5 class="card-title">JavaScript Calculator</h5>
         <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
-        <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Do Math</a>
+        <div class="btnContainer">
+          <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try Demo</a>
+          <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
@@ -107,7 +116,10 @@
         <h5 class="card-title">Etch-A-Sketch</h5>
         <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
-        <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Draw Something</a>
+        <div class="btnContainer">
+          <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Try Demo</a>
+          <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
@@ -118,7 +130,10 @@
         <h5 class="card-title">Rock, Paper, Scissors</h5>
         <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
-        <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Play Me</a>
+        <div class="btnContainer">
+          <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Play Game</a>
+          <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
@@ -129,8 +144,10 @@
         <h5 class="card-title">Landingpage Project</h5>
         <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web Design</a> course at <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp.org</a>.</p>
-        <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Visit
-          Me</a>
+        <div class="btnContainer">
+          <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Visit Site</a>
+          <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary" target="'_blank">View Repo</a>
+        </div>
       </div>
     </div>
 
