--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -62,6 +63,12 @@
       </div>
     </div>
   </nav>
+
+  <div class="container-fluid myArticles">
+    <h1 class="text-center" style="color:white;">Thanks for visiting my Blog!</h1>
+    <hr style="color:transparent;">
+      <h3 class="text-center">These are reflections of my experience during the MIT xPro Coding Bootcamp.</h3>
+  </div>
 
   <div class="accordion myBlog mx-auto">
 
