--- a/pages/blog.html
+++ b/pages/blog.html
@@ -74,13 +74,13 @@
 
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button id='blog3Button' onclick="blog3Open()" class="accordion-button bg-transparent" type="button" data-bs-toggle="collapse"
+        <button id='blog3Button' onclick="blog3Open()" class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
           <h6>blog[3]</h6>
           <h5>Pac-Man Mini-Game</h5>
         </button>
       </h2>
-      <div id="blog3" class="accordion-collapse collapse show"
+      <div id="blog3" class="accordion-collapse collapse"
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
           <div class="'container-fluid row">
