proj repo btns blog3 video

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,7 @@
         <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='../pages/blog.html#blog3'>Blog Post</a>.</p>
         <div class="btnContainer">
           <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Game</a>
-          <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo " target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
         <p class="card-text">This was my <span>first website</span> using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
         <div class="btnContainer">
           <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
-          <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
         <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
         <div class="btnContainer">
           <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try Demo</a>
-          <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
         <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
         <div class="btnContainer">
           <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Try Demo</a>
-          <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
         <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
         <div class="btnContainer">
           <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Play Game</a>
-          <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
@@ -146,7 +146,7 @@
         <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web Design</a> course at <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp.org</a>.</p>
         <div class="btnContainer">
           <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Visit Site</a>
-          <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary" target="'_blank">View Repo</a>
+          <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
         </div>
       </div>
     </div>
