--- a/pages/blog.html
+++ b/pages/blog.html
@@ -84,7 +84,7 @@
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
           <div class="'container-fluid row">
-            <div class="col-sm-8">
+            <div class="col-sm-7">
               <div>
                 <h4 class="text-center mb-4">Hello Again!</h4>
                 <div class='m-auto' style="max-width: 480px;">
@@ -100,9 +100,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 my-auto p-3">
-              <img class="img-fluid" src="../pics/pacman/pacman_minigame.png"
-                alt="Screenshot of JavaScript showing the resize function.">
+            <div class="col-sm-5 my-auto">
+              <iframe id='blog3Video' class='container-fluid ratio ratio-1x1'
+              src="https://youtube.com/embed/iOKK8Q2unxE?" frameborder="0" allowfullscreen>
+              </iframe>
+              <!-- <img class="img-fluid" src="../pics/pacman/pacman_minigame.png"
+                alt="Screenshot of JavaScript showing the resize function."> -->
             </div>
             <div class="row mx-auto">
               <img src="../pics/pacman/pacman_icon.png" class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4'
@@ -189,12 +192,10 @@
               <p class="narrowText">Image 5 shows the functions for the Ball element. Refer to my <a href='./blog.html#blog2'>Magic Ball Challenge</a> blog post for more details.</p>
             </div>
           </div>
-          <div class="container-fluid row mx-auto">
+          <div class="container-fluid row">
             <div class="col-sm-6">
-              <h6 class="text-center">Watch Video</h6>
-              <iframe class='container-fluid ratio ratio-1x1'
-                src="https://youtube.com/embed/iOKK8Q2unxE?&autoplay=0&mute=1" frameborder="0" allowfullscreen>
-              </iframe>
+              <img class="img-fluid p-3" src="../pics/pacman/pacman_minigame.png"
+                alt="Screenshot of JavaScript showing the resize function.">
             </div>
             <div class="col-sm-6 my-auto text-center">
               <h6>Click Below to Play</h6>
@@ -222,8 +223,8 @@
         <div class="accordion-body">
           <div class="'container-fluid row">
             <div class="col-sm-8 my-auto">
-              <iframe class='ratio ratio-4x3' width="420" height="315"
-                src="https://youtube.com/embed/f0mTQx5ATQI?&autoplay=0&mute=1" frameborder="0" allowfullscreen>
+              <iframe id='blog2Video' class='ratio ratio-4x3' width="420" height="315"
+                src="https://youtube.com/embed/f0mTQx5ATQI" frameborder="0" allowfullscreen>
               </iframe>
             </div>
             <div class="col-sm-4">
@@ -486,7 +487,7 @@
 
   <!-- JS Libraries -->
   <script src="../libraries/bootstrap.min.js"></script>
-  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
+  <script src="../libraries/ScrollMagic.min.js"></script>
   <script src='../js/blog.js'></script>
 </body>
 
