navbar bg black blog3 game png hide

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -193,19 +193,21 @@
             </div>
           </div>
           <div class="container-fluid row">
-            <div class="col-sm-6">
+            <!-- <div class="col-sm-6">
               <img class="img-fluid p-3" src="../pics/pacman/pacman_minigame.png"
                 alt="Screenshot of JavaScript showing the resize function.">
-            </div>
+            </div> -->
             <div class="col-sm-6 my-auto text-center">
               <h6>Click Below to Play</h6>
               <h5><a href="https://codetracklift.github.io/pacman" target="_blank">Pac-Man Mini-Game</a></h5>
               <p>Thank you for visiting, and happy coding!</p>
             </div>
-            <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
+            <div class="col-sm-6 my-auto">
+              <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
                 alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 27, 2022
-            </p>
-            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+              </p>
+              <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+            </div>
           </div>
         </div>
       </div>
